<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/ScrollView"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".code.activities.ProfileActivity">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="178dp"
            android:layout_height="195dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/profile_picture"
            app:layout_constraintBottom_toTopOf="@+id/nameField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.51"
            app:srcCompat="@android:drawable/ic_menu_help" />

        <EditText
            android:id="@+id/nameField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:focusableInTouchMode="false"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:ems="10"
            android:clickable="false"
            android:cursorVisible="false"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/genderGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePicture" />

        <EditText
            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:focusableInTouchMode="false"
            android:autofillHints=""
            android:ems="10"
            android:hint="Age"
            android:clickable="false"
            android:cursorVisible="false"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hairColor" />

        <EditText
            android:id="@+id/eyeColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="Eye Color"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderGroup"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/Height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:hint="Height"
            android:clickable="false"
            android:cursorVisible="false"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eyeColor" />

        <EditText
            android:id="@+id/hairColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="Hair Color"
            android:importantForAutofill="no"
            android:clickable="false"
            android:cursorVisible="false"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:focusableInTouchMode="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Height" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="Comments"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:focusableInTouchMode="false"
            app:layout_constraintTop_toBottomOf="@+id/age" />

        <RadioGroup
            android:id="@+id/genderGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:focusableInTouchMode="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameField">

            <RadioButton
                android:id="@+id/femaleButton"
                android:layout_width="wrap_content"
                android:clickable="false"
                android:layout_height="wrap_content"
                android:text="@string/female"
                tools:layout_editor_absoluteX="95dp"
                android:focusableInTouchMode="false"
                tools:layout_editor_absoluteY="304dp" />

            <RadioButton
                android:id="@+id/maleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/male"
                tools:layout_editor_absoluteX="214dp"
                android:focusableInTouchMode="false"
                tools:layout_editor_absoluteY="304dp" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>